log improvement